# ddp_jax

./: README.md  example_alddp.py  pyproject.toml
ddp_jax/controllers/: al_ddp.py  ddp.py
ddp_jax/dynamics/: dynamics_jax.py
ddp_jax/utils/: defines.py  util_functions.py
examples/: example_alddp.py  example_ddp.py
