[tool.poetry]
name = "ddp_jax"
version = "0.1.0"
description = ""
authors = ["Emile-Aquila"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jax = "^0.4.35"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
jaxopt = "^0.8.3"
chex = "^0.1.87"
scikit-learn = "^1.5.2"
python-louvain = "^0.16"
tqdm = "^4.67.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
